load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "timing",
    srcs = ["timing.py"],
)

py_library(
    name = "conditions",
    srcs = ["conditions.py"],
)

py_library(
    name = "actions",
    srcs = ["actions.py"],
)

py_library(
    name = "version",
    srcs = ["version.py"],
)

py_binary(
    name = "ghact",
    srcs = [
        "ghact.py",
    ],
    main = "ghact.py",
    deps = [
        ":actions",
        ":conditions",
        ":timing",
        ":version",
    ],
)

py_test(
    name = "timing_test",
    srcs = ["timing_test.py"],
    deps = [":timing"],
)

py_test(
    name = "conditions_test",
    srcs = ["conditions_test.py"],
    deps = [":conditions"],
)

py_test(
    name = "ghact_test",
    srcs = ["ghact_test.py"],
    deps = [
        ":actions",
        ":conditions",
        ":ghact",
        ":timing",
        ":version",
    ],
)
